--- a/package.json
+++ b/package.json
@@ -93,15 +93,16 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-maps": "0.26.1",
     "react-native-nav": "2.0.2",
+    "react-native-web": "^0.11.7",
     "react-native-web-maps": "0.2.0",
     "react-test-renderer": "16.9.0",
-    "react-native-web": "^0.11.7",
     "tslint": "6.1.2",
     "tslint-config-prettier": "1.18.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.6.0",
+    "@trava/react-native-keyboard-accessory-view": "^2.5.0",
     "dayjs": "^1.8.26",
     "prop-types": "^15.7.2",
     "react-native-communications": "^2.2.1",
