--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-gifted-chat",
+  "name": "@trava/react-native-gifted-chat",
   "version": "0.16.3",
   "description": "The most complete chat UI for React Native",
   "main": "node_modules/expo/AppEntry.js",
